change params info